get-core-meta-data changes accepting meta master
